<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context=".CalculateActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/calc_float"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/ic_calculate"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:id="@+id/linearA"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calculate_the_dosage_of_the_drug_based_on_the_weight"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            android:textAlignment="center"
            android:padding="5dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/linearA"
        android:id="@+id/linear">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/dosage"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:layout_weight="1"/>

        <EditText
            android:id="@+id/dosage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="25sp"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/mg_kg"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/linear">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/weight"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:layout_weight="1"/>

        <EditText
            android:id="@+id/weight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="25sp"
            tools:ignore="TouchTargetSizeCheck" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/kg"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:shadowRadius="3"
            android:layout_weight="1"/>

    </LinearLayout>

    <TextView
        android:id="@+id/dif"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear2"
        android:layout_marginTop="10dp"
        android:background="@color/white1"
        android:padding="5dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold|italic" />
    <LinearLayout
        android:id="@+id/linear3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/dif">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/dose"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:layout_weight="1"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:inputType="numberDecimal"
            android:id="@+id/dose"
            android:background="@color/white"
            android:textAlignment="center"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/mg"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:shadowRadius="3"
            android:layout_weight="1"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/linear4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/linear3">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/per_volume"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:layout_weight="1"/>

        <EditText
            android:id="@+id/per_volume"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="25sp"
            tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/ml"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:shadowRadius="3"
            android:layout_weight="1"/>

    </LinearLayout>
    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear4"
        android:layout_marginTop="10dp"
        android:background="@color/white1"
        android:padding="5dp"
        android:text="@string/result"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold|italic" />

    <LinearLayout
        android:id="@+id/linear5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/result">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/dose"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/re_Dosage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="25sp" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/mg_daily"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:shadowRadius="3"
            android:layout_weight="1"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/linear6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/linear5">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/liquid"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:id="@+id/resultFinal"
            android:background="@color/white"
            android:textAlignment="center"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/mg_daily"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:shadowRadius="3"
            android:layout_weight="1"/>

    </LinearLayout>


</RelativeLayout>