<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateColumnActivity">

    <LinearLayout
        android:id="@+id/liner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/Et_update"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/purchase_price_update"
            android:inputType="text"
            android:minHeight="48dp"
            android:padding="10dp"
            android:textColorHint="@color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/updateBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:textSize="20sp"
            android:text="@string/update" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/liner1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:layout_below="@+id/liner"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/Et_update1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/sell_price_update"
            android:inputType="text"
            android:minHeight="48dp"
            android:padding="10dp"
            android:textColorHint="@color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/updateSell"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:textSize="20sp"
            android:text="@string/update" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/liner1"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:padding="8dp"
        android:text="@string/information"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="italic" />

</RelativeLayout>