<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/in"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_weight="1"
            android:background="@color/zxing_transparent"

            android:text="@string/helping"
            android:textAlignment="textEnd"
            android:textColor="#000"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_weight="1"
            android:background="@color/zxing_transparent"
            android:text="@string/Here"

            android:textAlignment="textStart"
            android:textColor="#ff5131"
            android:textSize="22sp"
            android:textStyle="bold" />

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="أدخل المفتاح"
        app:hintTextColor="@color/black"
        android:id="@+id/keyinput"
        android:layout_centerInParent="true"
        android:layout_marginTop="8dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        app:startIconDrawable="@drawable/ic_person"
        >

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/key"
        android:shadowColor="@color/black"
        />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.gms.common.internal.SignInButtonImpl
        android:id="@+id/searchKey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/keyinput"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/text"
        android:text="@string/Entry"
        android:textSize="20sp" />

</RelativeLayout>